--- a/jade/views/layout.jade
+++ b/jade/views/layout.jade
@@ -3,7 +3,7 @@ html(lang="en")
 head
 	meta(charset="UTF-8")
 	title Document
-	link(rel="stylesheet", href="style/common.css")
+	link(rel="stylesheet", href="/style/common.css")
 	block style
 body
 	.menu
